--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ant-design/icons-react-native": "^2.3.2",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-firebase/firestore": "^17.3.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -20,9 +23,11 @@
     "expo-font": "~11.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.17.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-ionicons": "^4.6.5",
+    "react-native-user-avatar-component": "^0.0.4",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
