--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@ant-design/icons-react-native": "^2.3.2",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/blur": "^4.3.0",
     "@react-native-firebase/app": "^17.3.2",
     "@react-native-firebase/auth": "^17.3.2",
     "@react-native-firebase/firestore": "^17.3.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/react-native-skia": "^0.1.178",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
+    "expo-blur": "~12.2.2",
     "expo-font": "~11.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
