--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@shopify/react-native-skia": "^0.1.178",
+    "@shopify/react-native-skia": "0.1.172",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
     "expo-blur": "~12.2.2",
@@ -28,8 +28,9 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-ionicons": "^4.6.5",
+    "react-native-toast-message": "^2.1.6",
     "react-native-user-avatar-component": "^0.0.4",
     "react-native-vector-icons": "^9.2.0"
   },
