--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "@ant-design/icons-react-native": "^2.3.2",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/blur": "^4.3.0",
     "@react-native-firebase/app": "^17.3.2",
     "@react-native-firebase/auth": "^17.3.2",
     "@react-native-firebase/firestore": "^17.3.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/react-native-skia": "0.1.172",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
+    "expo-blur": "~12.2.2",
     "expo-font": "~11.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-ionicons": "^4.6.5",
+    "react-native-toast-message": "^2.1.6",
     "react-native-user-avatar-component": "^0.0.4",
     "react-native-vector-icons": "^9.2.0"
   },
