--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@shopify/react-native-skia": "0.1.172",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
@@ -26,7 +27,7 @@
     "expo-font": "~11.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.17.2",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-ionicons": "^4.6.5",
