--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "firebase": "^9.18.0",
         "react": "18.2.0",
         "react-native": "0.71.4",
+        "react-native-gesture-handler": "^2.9.0",
         "react-native-ionicons": "^4.6.5",
         "react-native-swipe-list-view": "^3.2.9",
         "react-native-toast-message": "^2.1.6",
