--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@expo-google-fonts/inter": "^0.2.3",
         "@expo/vector-icons": "^13.0.0",
         "@react-native-community/blur": "^4.3.0",
+        "@react-native-community/geolocation": "^3.0.6",
         "@react-native-firebase/app": "^17.3.2",
         "@react-native-firebase/auth": "^17.3.2",
         "@react-native-firebase/firestore": "^17.3.2",
@@ -27,12 +28,14 @@
         "expo-blur": "~12.2.2",
         "expo-font": "~11.1.1",
         "expo-image-picker": "~14.1.1",
+        "expo-location": "^15.1.1",
         "expo-screen-orientation": "~5.1.1",
         "expo-status-bar": "~1.4.4",
         "firebase": "^9.18.0",
         "react": "18.2.0",
         "react-native": "0.71.4",
         "react-native-ionicons": "^4.6.5",
+        "react-native-prompt-android": "^1.1.0",
         "react-native-swipe-list-view": "^3.2.9",
         "react-native-toast-message": "^2.1.6",
         "react-native-user-avatar-component": "^0.0.4",
