--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@react-navigation/stack": "^6.3.16",
         "@shopify/react-native-skia": "0.1.172",
         "axios": "^1.3.4",
+        "date-fns": "^2.30.0",
         "expo": "~48.0.6",
         "expo-blur": "~12.2.2",
         "expo-font": "~11.1.1",
